# BoxO3DE

./: CMakeLists.txt  README.md  gem.json
Code/: CMakeLists.txt  boxo3de_api_files.cmake  boxo3de_editor_private_files.cmake  boxo3de_editor_shared_files.cmake  boxo3de_editor_tests_files.cmake  boxo3de_private_files.cmake  boxo3de_shared_files.cmake  boxo3de_tests_files.cmake
Code/Include/BoxO3DE/: BoxO3DEBus.h  BoxO3DETypeIds.h  ColliderComponentBus.h  ColliderShapeBus.h  EditorColliderComponentRequestBus.h  MathConversions.h  NativeTypeIdentifiers.h  UserDataTypes.h  UserDataTypes.inl  Utils.h  Utils.inl
Code/Include/BoxO3DE/Configuration/: Box3DConfiguration.h
Code/Include/BoxO3DE/Debug/: Box3DDebugConfiguration.h  Box3DDebugInterface.h
Code/Include/BoxO3DE/Material/: Box3DMaterial.h  Box3DMaterialConfiguration.h
Code/Platform/Android/: boxo3de_shared_files.cmake
Code/Platform/Linux/: boxo3de_shared_files.cmake
Code/Platform/Mac/: PAL_mac.cmake  boxo3de_private_files.cmake
Code/Platform/Windows/: boxo3de_shared_files.cmake
Code/Platform/iOS/: boxo3de_shared_files.cmake
Code/Source/: BoxO3DEModule.cpp  BoxO3DEModule.h  NameConstants.cpp  NameConstants.h  Utils.cpp  Utils.h
Code/Source/Clients/: BaseColliderComponent.cpp  BaseColliderComponent.h  BoxColliderComponent.cpp  BoxColliderComponent.h  BoxO3DESystemComponent.cpp  BoxO3DESystemComponent.h  CapsuleColliderComponent.cpp  CapsuleColliderComponent.h  ComponentDescriptors.cpp  ComponentDescriptors.h  DefaultWorldComponent.cpp  DefaultWorldComponent.h  RigidBody.cpp  RigidBody.h  RigidBodyComponent.cpp  RigidBodyComponent.h  Shape.cpp  Shape.h  SphereColliderComponent.cpp  SphereColliderComponent.h  StaticRigidBody.cpp  StaticRigidBody.h  StaticRigidBodyComponent.cpp  StaticRigidBodyComponent.h
Code/Source/Common/: Box3DSceneQueryHelpers.cpp  Box3DSceneQueryHelpers.h
Code/Source/Configuration/: Box3DConfiguration.cpp  Box3DSettingsRegistryManager.cpp  Box3DSettingsRegistryManager.h
Code/Source/Debug/: Box3DDebug.cpp  Box3DDebug.h  Box3DDebugConfiguration.cpp
Code/Source/Material/: Box3DMaterial.cpp  Box3DMaterialConfiguration.cpp  Box3DMaterialManager.cpp  Box3DMaterialManager.h
Code/Source/Scene/: Box3DScene.cpp  Box3DScene.h  Box3DSceneInterface.cpp  Box3DSceneInterface.h
Code/Source/System/: Box3DSystem.cpp  Box3DSystem.h
Code/Source/Tools/: BoxO3DEEditorSystemComponent.cpp  BoxO3DEEditorSystemComponent.h  EditorComponentDescriptors.cpp  EditorComponentDescriptors.h  EditorRigidBodyComponent.cpp  EditorRigidBodyComponent.h  EditorShapeColliderComponent.cpp  EditorShapeColliderComponent.h  EditorStaticRigidBodyComponent.cpp  EditorStaticRigidBodyComponent.h
Code/Source/Tools/System/: Box3DEditorMaterialAsset.cpp  Box3DEditorMaterialAsset.h  Box3DEditorMaterialAssetBuilder.cpp  Box3DEditorMaterialAssetBuilder.h  Box3DEditorSettingsRegistryManager.cpp  Box3DEditorSettingsRegistryManager.h  Box3DSubComponentModeBase.h  ColliderComponentMode.cpp  ColliderComponentMode.h  ColliderComponentModeBus.h  CollisionFilteringWidget.cpp  CollisionFilteringWidget.h  CollisionGroupWidget.cpp  CollisionGroupWidget.h  CollisionGroupsWidget.cpp  CollisionGroupsWidget.h  CollisionLayerWidget.cpp  CollisionLayerWidget.h  CollisionLayersWidget.cpp  CollisionLayersWidget.h  ConfigurationWidget.cpp  ConfigurationWidget.h  ConfigurationWindowBus.h  DebugDraw.cpp  DebugDraw.h  DocumentationLinkWidget.cpp  DocumentationLinkWidget.h  EditorWindow.cpp  EditorWindow.h  EditorWindow.ui  InertiaPropertyHandler.cpp  InertiaPropertyHandler.h  KinematicDescriptionDialog.cpp  KinematicDescriptionDialog.h  PropertyTypes.cpp  PropertyTypes.h  SettingsWidget.cpp  SettingsWidget.h
Code/Source/Tools/System/ComponentModes/: ColliderAssetScaleMode.cpp  ColliderAssetScaleMode.h  ColliderBoxMode.cpp  ColliderBoxMode.h  ColliderCapsuleMode.cpp  ColliderCapsuleMode.h  ColliderCylinderMode.cpp  ColliderCylinderMode.h  ColliderOffsetMode.cpp  ColliderOffsetMode.h  ColliderRotationMode.cpp  ColliderRotationMode.h  ColliderSphereMode.cpp  ColliderSphereMode.h
Registry/: assetprocessor_settings.setreg
